# Transformer-therapist

./: .gitignore  README.md  make.py  pyproject.toml  setup.sh
src/: data.py  main.py  model.py  test.ipynb  train.py
