[project]
name = "transformer-thearpist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi[all,standard]>=0.116.1",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.6",
  "notebook>=7.4.5",
  "numpy>=2.2.6",
  "pandas>=2.3.2",
  "pandas-stubs>=2.3.2.250827",
  "seaborn>=0.13.2",
  "tensorboard>=2.20.0",
  "torch>=2.8.0",
  "tqdm>=4.67.1",
  "transformers>=4.56.2",
]
